test/libsolidity/syntaxTests/parsing/import_simple.sol
import "hello";
// ----
// ParserError 6275: (0-15='import "hello";'): Source "hello" not found: File not supplied initially.
